// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

enum CloudresourcemanagerProjectLifecycleStateEnum {
  CloudresourcemanagerProjectLifecycleStateEnumNO_VALUE_DO_NOT_USE = 0;
  CloudresourcemanagerProjectLifecycleStateEnumLIFECYCLE_STATE_UNSPECIFIED = 1;
  CloudresourcemanagerProjectLifecycleStateEnumACTIVE = 2;
  CloudresourcemanagerProjectLifecycleStateEnumDELETE_REQUESTED = 3;
  CloudresourcemanagerProjectLifecycleStateEnumDELETE_IN_PROGRESS = 4;
}

message CloudresourcemanagerProject {
  map<string, string> labels = 1;
  CloudresourcemanagerProjectLifecycleStateEnum lifecycle_state = 2;
  string displayName = 3;
  CloudresourcemanagerProjectParent parent = 4;
  string name = 5;
  int64 project_number = 6;
}

message CloudresourcemanagerProjectParent {
  string type = 1;
  string id = 2;
}

message ApplyCloudresourcemanagerProjectRequest {
  CloudresourcemanagerProject resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteCloudresourcemanagerProjectRequest {
  string service_account_file = 1;
  CloudresourcemanagerProject resource = 2;
}

message ListCloudresourcemanagerProjectRequest {
  string service_account_file = 1;
	CloudresourcemanagerProject resource = 2;
}

message ListCloudresourcemanagerProjectResponse {
  repeated CloudresourcemanagerProject items = 1;
}

service CloudresourcemanagerProjectService {
  rpc ApplyCloudresourcemanagerProject(ApplyCloudresourcemanagerProjectRequest) returns (CloudresourcemanagerProject);
  rpc DeleteCloudresourcemanagerProject(DeleteCloudresourcemanagerProjectRequest) returns (google.protobuf.Empty);
  rpc ListCloudresourcemanagerProject(ListCloudresourcemanagerProjectRequest) returns (ListCloudresourcemanagerProjectResponse);
}
